--- a/package.json
+++ b/package.json
@@ -54,12 +54,12 @@
     "input-otp": "latest",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.2.4",
     "next-themes": "latest",
-    "react": "^19",
+    "react": "^19.1.1",
     "react-calendly": "^4.4.0",
     "react-day-picker": "latest",
-    "react-dom": "^19",
+    "react-dom": "^19.1.1",
     "react-hook-form": "latest",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
